--- a/themes/hugo-theme-texify/layouts/_default/index.html
+++ b/themes/hugo-theme-texify/layouts/_default/index.html
@@ -14,14 +14,14 @@
       {{ range $paginator.Pages }}
       <div class="post">
         <h2>
-          <a href="{{ .Permalink }}">{{ .Title }}</a>
+          <a href="{{ .Permalink }}" class="customTitle">{{ .Title }}</a>
           <time>{{ .PublishDate.Format .Site.Params.dateFormat }}</time>
         </h2>
         {{ if ne .Params.tags nil }}
         <div>
           <b>Subthemes: </b>
           {{ range .Params.tags }}
-          <a class="link" href='{{ "tags" | absURL }}/{{ . | urlize }}'>#{{ . }}</a>
+          <a class="link" href='{{ "tags" | absURL }}/{{ . | urlize }}'>{{ . }}</a>
           {{ end }}
         </div>
         {{ end }}
