--- a/themes/hugo-theme-texify/layouts/partials/header.html
+++ b/themes/hugo-theme-texify/layouts/partials/header.html
@@ -1,6 +1,6 @@
 <header id="header">
   <h1>
-    <a href="{{ .Site.BaseURL }}">{{ .Site.Title }}</a>
+    <a href="{{ .Site.BaseURL }}" class="customBlogTitle">{{ .Site.Title }}</a>
   </h1>
 
   <nav>
