--- a/themes/hugo-theme-texify/layouts/partials/header.html
+++ b/themes/hugo-theme-texify/layouts/partials/header.html
@@ -6,7 +6,7 @@
   <nav>
     {{ range .Site.Menus.main }}
     <span class="nav-bar-item">
-      <a class="link" href="{{ .URL | safeURL }}">{{ .Name }}</a>
+      <a class="navbarLink" href="{{ .URL | safeURL }}">{{ .Name }}</a>
     </span>
     {{ end }}
   </nav>
