--- a/themes/hugo-theme-texify/layouts/partials/footer.html
+++ b/themes/hugo-theme-texify/layouts/partials/footer.html
@@ -1,6 +1,6 @@
 <footer id="footer">
   <div>
-    <span>© 2019</span> - <span>{{ now.Format "2006"}}</span>
+    <span>Copyright © 2021</span>
   </div>
 
   <div>
