--- a/themes/hugo-theme-texify/static/css/common.css
+++ b/themes/hugo-theme-texify/static/css/common.css
@@ -100,8 +100,11 @@ time {
 
 .navbarLink {
     color: rgb(217,95,2);
-    text-align: center;
     /* font-size: 40px; */
+}
+
+.nav-bar-item {
+    text-align: center;
 }
 
 .paginator {
