--- a/themes/hugo-theme-texify/layouts/partials/footer.html
+++ b/themes/hugo-theme-texify/layouts/partials/footer.html
@@ -1,10 +1,10 @@
 <footer id="footer">
   <div>
-    <span>Copyright © 2021</span>
+    <span>Copyright © Rees W. Morrison 2021</span>
   </div>
 
   <div>
-    <span>Powered by </span>
+    <span>Powered by R, Netlify, </span>
     <a class="link" href="https://gohugo.io/">Hugo</a>
     <span> 🍦 Theme </span>
     <a class="link" href="https://github.com/queensferryme/hugo-theme-texify">TeXify</a>
