--- a/themes/hugo-theme-texify/static/css/common.css
+++ b/themes/hugo-theme-texify/static/css/common.css
@@ -150,7 +150,7 @@ time {
 #header > nav {
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: center;   /*instead of space-around  */
     max-width: 768px;
     width: 100%;
 }
