--- a/themes/hugo-theme-texify/static/css/common.css
+++ b/themes/hugo-theme-texify/static/css/common.css
@@ -135,7 +135,7 @@ time {
     align-items: center;
     display: flex;
     justify-content: space-around;
-    flex-direction: column;
+    flex-direction: row;
 }
 
 #header > h1 {
