--- a/themes/hugo-theme-texify/static/css/common.css
+++ b/themes/hugo-theme-texify/static/css/common.css
@@ -139,13 +139,9 @@ time {
 }
 
 #header > h1 {
-    text-align: center;
-}
-
-@media screen and (min-width: 768px) {
-    #header > h1 {
-        font-size: 2.8rem;
-    }
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;   /*text-align: center & 1st 2 lines */
 }
 
 #header > nav {
@@ -155,6 +151,14 @@ time {
     max-width: 768px;
     width: 100%;
 }
+
+@media screen and (min-width: 768px) {
+    #header > h1 {
+        font-size: 2.8rem;
+    }
+}
+
+
 
 #header > nav > span > a {
     font-size: 40px;
