--- a/themes/hugo-theme-texify/static/css/common.css
+++ b/themes/hugo-theme-texify/static/css/common.css
@@ -135,13 +135,17 @@ time {
     align-items: center;
     display: flex;
     justify-content: space-around;
-    flex-direction: row;
+    flex-direction: column;
 }
 
 #header > h1 {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;   /*text-align: center & 1st 2 lines */
+    text-align: center;
+}
+
+@media screen and (min-width: 768px) {
+    #header > h1 {
+        font-size: 2.8rem;
+    }
 }
 
 #header > nav {
@@ -151,14 +155,6 @@ time {
     max-width: 768px;
     width: 100%;
 }
-
-@media screen and (min-width: 768px) {
-    #header > h1 {
-        font-size: 2.8rem;
-    }
-}
-
-
 
 #header > nav > span > a {
     font-size: 40px;
