--- a/themes/hugo-theme-texify/layouts/_default/single.html
+++ b/themes/hugo-theme-texify/layouts/_default/single.html
@@ -22,7 +22,7 @@
       <div>
         <b>Subthemes: </b>
         {{ range .Params.tags }}
-        <a class="link" href='{{ "tags" | absURL }}/{{ . | urlize }}'>#{{ . }}</a>
+        <a class="link" href='{{ "tags" | absURL }}/{{ . | urlize }}'>{{ . }}</a>
         {{ end }}
       </div>
       {{ end }}
