trying to figure out extra subthemes navbar

--- a/themes/hugo-theme-texify/layouts/partials/footer.html
+++ b/themes/hugo-theme-texify/layouts/partials/footer.html
@@ -1,6 +1,6 @@
 <footer id="footer">
   <div>
-    <span>© Rees W. Morrison 2021</span>
+    <span>©2021 Rees W. Morrison </span>
   </div>
 
   <div>
