still trying to get themes distributed

--- a/themes/hugo-theme-texify/layouts/_default/single.html
+++ b/themes/hugo-theme-texify/layouts/_default/single.html
@@ -10,21 +10,27 @@
     <div id="wrapper">
     {{ partial "header.html" . }}
     
-    <div class="themeSidebar" style="padding: 10px; border: 2px gray;
+<!-- https://stackoverflow.com/questions/4108726/how-to-spread-elements-horizontally-evenly -->
+    
+    <div class="themeSidebar" style="display: flex; 
+    justify-content: space-evenly;
+    padding: 10px; 
+    border: 2px gray;
     font-size: 20px;
-    width: 25%;
-    vertical-align: middle;">
-      {{ range (slice "[Alcohol](https://themesfromart.com/post/2021-02-03-alcohol-wide-view/alcohol-wide-angle/)" "[Beauty](https://themesfromart.com/post/2021-04-21-beauty-additional-subthemes/beautyaddl/)" "[Chance](https://themesfromart.com/post/2021-03-14-chanceadditional/chanceaddl/)" "[Death](https://themesfromart.com/post/2021-05-03-death-additional/deathaddl/)"   "[Decisions](https://themesfromart.com/post/2021-02-10-decisions-a-wider-angle-view/decisionswiderangle/)" "[Destruction](https://themesfromart.com/post/2021-02-18-destruction-a-wider-angle/destructionwide/)" "[Silence](https://themesfromart.com/post/2021-03-14-chanceadditional/chanceaddl/)" "[Time](https://themesfromart.com/post/2021-03-09-time-additional/timeadditional/)" "[Trains](https://themesfromart.com/post/2021-05-10-trains-additional-subthemes/trainsaddl/)" "[Work](https://themesfromart.com/post/2021-02-26-workadditional/workperspective/)") }}
+    width: 50%;
+    vertical-align: middle;
+    text-align: center;">
+      {{ range (slice "[Alcohol,](https://themesfromart.com/post/2021-02-03-alcohol-wide-view/alcohol-wide-angle/)" "[Beauty,](https://themesfromart.com/post/2021-04-21-beauty-additional-subthemes/beautyaddl/)" "[Chance,](https://themesfromart.com/post/2021-03-14-chanceadditional/chanceaddl/)" "[Death,](https://themesfromart.com/post/2021-05-03-death-additional/deathaddl/)"   "[Decisions,](https://themesfromart.com/post/2021-02-10-decisions-a-wider-angle-view/decisionswiderangle/)" "[Destruction,](https://themesfromart.com/post/2021-02-18-destruction-a-wider-angle/destructionwide/)" "[Silence,](https://themesfromart.com/post/2021-03-14-chanceadditional/chanceaddl/)" "[Time,](https://themesfromart.com/post/2021-03-09-time-additional/timeadditional/)" "[Trains,](https://themesfromart.com/post/2021-05-10-trains-additional-subthemes/trainsaddl/)" "[Work,](https://themesfromart.com/post/2021-02-26-workadditional/workperspective/)") }}
         {{ . | markdownify }} <br />
       {{ end }}
     </div>
     
-    <div style="background: ghostwhite; 
+    <div style="background: white; 
             font-size: 20px; 
-            padding: 10px; 
+            padding: 5px; 
             border: 1px solid lightgray; 
-            margin: 10px;">
-  Click on a Theme in the box above to go to posts about the Theme.
+            margin: 5px;">
+  Click on a Theme in the box above to go to a summary of the four posts about the Theme.
     </div>
     
     <main id="main" class="post">
