--- a/themes/hugo-theme-texify/layouts/_default/single.html
+++ b/themes/hugo-theme-texify/layouts/_default/single.html
@@ -22,12 +22,12 @@
   .fullCard {
   	position: relative;
   	background-color: rgba(250, 250, 211, 0.1);
-  	width: 60%;
+  	width: 55%;
   	text-align: center;
   	right: 5px;
     border: 1px solid #ccc;
     border-radius: 5px;
-    margin: 0 auto;
+    margin: auto;
     padding: 1px;
   }
   .cardContent {
@@ -39,6 +39,7 @@
     padding: 2px;
   }
   .cardText {
+    margin: auto;
     margin-bottom: 1px;
     text-align: center;
   }
