used &copy in footer

--- a/themes/hugo-theme-texify/layouts/partials/footer.html
+++ b/themes/hugo-theme-texify/layouts/partials/footer.html
@@ -1,6 +1,6 @@
 <footer id="footer">
   <div>
-    <span>©2021 Rees W. Morrison </span>
+    <span>&copy; 2021 Rees W. Morrison </span>
   </div>
 
   <div>
