added themes to box at top, single.html

--- a/themes/hugo-theme-texify/layouts/_default/single.html
+++ b/themes/hugo-theme-texify/layouts/_default/single.html
@@ -13,7 +13,7 @@
       background-color: rgba(45, 45, 45, 0.1);
   }
   p {
-	text-align: justify; 
+	text-align: center; 
   }
   .links {
     margin-right: 20px;
@@ -81,14 +81,18 @@
     <div class="cardLinks">
       	<a href="https://themesfromart.com/post/2021-02-03-alcohol-wide-view/alcohol-wide-angle/" target="_blank" class="links">Alcohol</a>
       	<a href="https://themesfromart.com/post/2021-04-21-beauty-additional-subthemes/beautyaddl/" target="_blank" class="links">Beauty</a>  
-	<a href="https://themesfromart.com/post/2021-03-14-chanceadditional/chanceaddl/" target="_blank" class="links">Chance</a>  
-	<a href="https://themesfromart.com/post/2021-05-03-death-additional/deathaddl/" target="_blank" class="links">Death</a>  
-	<a href="https://themesfromart.com/post/2021-02-10-decisions-a-wider-angle-view/decisionswiderangle/" target="_blank" class="links">Decisions</a>  
-	<a href="https://themesfromart.com/post/2021-02-18-destruction-a-wider-angle/destructionwide/" target="_blank" class="links">Destruction</a>
-	<a href="https://themesfromart.com/post/silenceadditional/" target="_blank" class="links">Silence</a>  
-	<a href="https://themesfromart.com/post/2021-03-09-time-additional/timeadditional/" target="_blank" class="links">Time</a>  
-	<a href="https://themesfromart.com/post/2021-05-10-trains-additional-subthemes/trainsaddl/" target="_blank" class="links">Trains</a>  
-	<a href="https://themesfromart.com/post/2021-02-26-workadditional/workperspective/" target="_blank" class="links">Work</a>  
+      		<a href="https://themesfromart.com/post/2021-06-14-birds-additional-sub-themes/birdsadditional/" target="_blank" class="links">Birds</a>
+	      <a href="https://themesfromart.com/post/2021-03-14-chanceadditional/chanceaddl/" target="_blank" class="links">Chance</a>  
+	       <a href="https://themesfromart.com/post/2021-05-21-churches-additional/churchesaddl/" target="_blank" class="links">Churches</a>
+	      <a href="https://themesfromart.com/post/2021-05-03-death-additional/deathaddl/" target="_blank" class="links">Death</a>  
+	      <a href="https://themesfromart.com/post/2021-02-10-decisions-a-wider-angle-view/decisionswiderangle/" target="_blank" class="links">Decisions</a>  
+	      <a href="https://themesfromart.com/post/2021-02-18-destruction-a-wider-angle/destructionwide/" target="_blank" class="links">Destruction</a>
+	      <a href="https://themesfromart.com/post/2021-06-20-friends-additional-subthemes/friendsaddl/" target="_blank" class="links">Friends</a>
+	      <a href="https://themesfromart.com/post/2021-06-27-sailing-ships-additional-subthemes/sailingships-addl/" target="_blank" class="links">Sailing Ships</a>
+	      <a href="https://themesfromart.com/post/silenceadditional/" target="_blank" class="links">Silence</a>         <a href="https://themesfromart.com/post/2021-07-12-sports-additional-subthemes/sportsaddl/" target="_blank" class="links">Sports</a>
+	      <a href="https://themesfromart.com/post/2021-03-09-time-additional/timeadditional/" target="_blank" class="links">Time</a>  
+	      <a href="https://themesfromart.com/post/2021-05-10-trains-additional-subthemes/trainsaddl/" target="_blank" class="links">Trains</a>  
+	      <a href="https://themesfromart.com/post/2021-02-26-workadditional/workperspective/" target="_blank" class="links">Work</a>  
     </div>
   </div>
 </div>
