--- a/themes/hugo-theme-texify/layouts/_default/single.html
+++ b/themes/hugo-theme-texify/layouts/_default/single.html
@@ -4,7 +4,6 @@
 <head>
   {{ partial "head.html" . }}
   <link rel="stylesheet" href='{{ "css/single.css" | absURL }}'>
-</head>
 
 <style>
   themeBox {  
@@ -29,6 +28,7 @@
     border-radius: 5px;
     margin: auto;
     padding: 1px;
+    margin-bottom: 6px;
   }
   .cardContent {
     margin: auto;
@@ -44,34 +44,13 @@
     text-align: center;
   }
 </style>
+</head>
 
 <body>
     <div id="wrapper">
     {{ partial "header.html" . }}
     <br>
-<!-- https://stackoverflow.com/questions/4108726/how-to-spread-elements-horizontally-evenly 
-    
-    <div class="themeSidebar" style="display: flex; 
-    justify-content: space-evenly;
-    padding: 10px; 
-    border: 2px gray;
-    font-size: 20px;
-    width: 50%;
-    vertical-align: middle;
-    text-align: center;"
-      {{ range (slice "[Alcohol](https://themesfromart.com/post/2021-02-03-alcohol-wide-view/alcohol-wide-angle/)" "[Beauty](https://themesfromart.com/post/2021-04-21-beauty-additional-subthemes/beautyaddl/)" "[Birds](https://themesfromart.com/post/2021-06-14-birds-additional-sub-themes/birdsadditional/)" "[Chance](https://themesfromart.com/post/2021-03-14-chanceadditional/chanceaddl/)" "[Churches](https://themesfromart.com/post/2021-05-21-churches-additional/churchesaddl/)" "[Death](https://themesfromart.com/post/2021-05-03-death-additional/deathaddl/)" "[Decisions](https://themesfromart.com/post/2021-02-10-decisions-a-wider-angle-view/decisionswiderangle/)" "[Destruction](https://themesfromart.com/post/2021-02-18-destruction-a-wider-angle/destructionwide/)" "[Friends](https://themesfromart.com/post/2021-06-20-friends-additional-subthemes/friendsaddl/)" "[Sailing Ships](https://themesfromart.com/post/2021-06-27-sailing-ships-additional-subthemes/sailingships-addl/)" "[Silence](https://themesfromart.com/post/2021-03-14-chanceadditional/chanceaddl/)" "[Sports](https://themesfromart.com/post/2021-07-12-sports-additional-subthemes/sportsaddl/)" "[Time](https://themesfromart.com/post/2021-03-09-time-additional/timeadditional/)" "[Trains](https://themesfromart.com/post/2021-05-10-trains-additional-subthemes/trainsaddl/)" "[Work](https://themesfromart.com/post/2021-02-26-workadditional/workperspective/)") }}
-        {{ . | markdownify }} <br>
-      {{ end }}
-    </div>
-    
-    <div style="background: white; 
-            font-size: 20px; 
-            padding: 5px; 
-            border: 1px solid lightgray; 
-            margin: 5px;">
-  Click on a Theme in the box above to go to a summary of the four posts about the Theme.
-    </div> -->
-    
+   
 <div class="fullCard">
   <div class="cardContent">
     <div class="cardText">
@@ -93,11 +72,21 @@
 	      <a href="https://themesfromart.com/post/2021-03-09-time-additional/timeadditional/" target="_blank" class="links">Time</a>  
 	      <a href="https://themesfromart.com/post/2021-05-10-trains-additional-subthemes/trainsaddl/" target="_blank" class="links">Trains</a>  
 	      <a href="https://themesfromart.com/post/2021-02-26-workadditional/workperspective/" target="_blank" class="links">Work</a>  
+	       <a href="https://themesfromart.com/post/2021-02-26-workadditional/workperspective/" target="_blank" class="links">Work</a> 
     </div>
   </div>
 </div>
 
-    
+<div class="fullCard">
+  <div class="cardContent">
+    <div class="cardText">
+  <!--<themeBox>Alcohol Beauty Chance Death Decisions Destruction Silence Time Trains Work</themeBox>-->
+      <p> If you are interested in a compilation of all the blog posts so far, please click <a href="LeanPub.com" target="_blank" class="links" >here to visit LeanPub.</a> </p>
+    </div>
+
+  </div>
+</div> 
+
     <main id="main" class="post">
       <!-- sections -->
       {{ if ne .Section "post" }}
