--- a/themes/hugo-theme-texify/layouts/_default/single.html
+++ b/themes/hugo-theme-texify/layouts/_default/single.html
@@ -54,24 +54,38 @@
 <div class="fullCard">
   <div class="cardContent">
     <div class="cardText">
-  <!--<themeBox>Alcohol Beauty Chance Death Decisions Destruction Silence Time Trains Work</themeBox>-->
+
       <p> Click on a Theme below to go to a summary of the four posts about that Theme. </p>
     </div>
     <div class="cardLinks">
       	<a href="https://themesfromart.com/post/2021-02-03-alcohol-wide-view/alcohol-wide-angle/" target="_blank" class="links">Alcohol</a>
       	<a href="https://themesfromart.com/post/2021-04-21-beauty-additional-subthemes/beautyaddl/" target="_blank" class="links">Beauty</a>  
-      		<a href="https://themesfromart.com/post/2021-06-14-birds-additional-sub-themes/birdsadditional/" target="_blank" class="links">Birds</a>
+      	<a href="https://themesfromart.com/post/2021-06-14-birds-additional-sub-themes/birdsadditional/" target="_blank" class="links">Birds</a>
+      	<a href="https://themesfromart.com/post/2022-01-02-books-additional-subthemes/booksaddl/" target="_blank" class="links">Books</a> 
+      	<a href="https://themesfromart.com/post/2021-07-26-bridges-additional-subthemes/bridgesaddl/" target="_blank" class="links">Bridges</a>
 	      <a href="https://themesfromart.com/post/2021-03-14-chanceadditional/chanceaddl/" target="_blank" class="links">Chance</a>  
 	       <a href="https://themesfromart.com/post/2021-05-21-churches-additional/churchesaddl/" target="_blank" class="links">Churches</a>
+	       <a href="https://themesfromart.com/post/2021-08-30-clothes-additional-subthemes/clothesaddl/" target="_blank" class="links">Clothes</a> 
+	       <a href="https://themesfromart.com/post/2021-09-09-dancing-additional-subthemes/dancingaddl/" target="_blank" class="links">Dancing</a>  
 	      <a href="https://themesfromart.com/post/2021-05-03-death-additional/deathaddl/" target="_blank" class="links">Death</a>  
 	      <a href="https://themesfromart.com/post/2021-02-10-decisions-a-wider-angle-view/decisionswiderangle/" target="_blank" class="links">Decisions</a>  
 	      <a href="https://themesfromart.com/post/2021-02-18-destruction-a-wider-angle/destructionwide/" target="_blank" class="links">Destruction</a>
+	      <a href="https://themesfromart.com/post/2022-01-14-dogs-additional-subthemes/dogsaddl/" target="_blank" class="links">Dogs</a>
+	      	      <a href="https://themesfromart.com/post/2021-12-17-fire-additional-subthemes/fireaddl/" target="_blank" class="links">Fire</a>
 	      <a href="https://themesfromart.com/post/2021-06-20-friends-additional-subthemes/friendsaddl/" target="_blank" class="links">Friends</a>
+	        <a href="https://themesfromart.com/post/2021-10-15-money-additional-subthemes/moneyaddl/" target="_blank" class="links">Money</a>
+	        <a href="https://themesfromart.com/post/2021-11-05-night-additional-subthemes/nightaddl/" target="_blank" class="links">Night</a>
+	      <a href="https://themesfromart.com/post/2021-10-03-rivers-additional-subthemes/riversaddl/" target="_blank" class="links">Rivers</a>
 	      <a href="https://themesfromart.com/post/2021-06-27-sailing-ships-additional-subthemes/sailingships-addl/" target="_blank" class="links">Sailing Ships</a>
-	      <a href="https://themesfromart.com/post/silenceadditional/" target="_blank" class="links">Silence</a>         <a href="https://themesfromart.com/post/2021-07-12-sports-additional-subthemes/sportsaddl/" target="_blank" class="links">Sports</a>
+	      <a href="https://themesfromart.com/post/silenceadditional/" target="_blank" class="links">Silence</a>
+	      <a href="https://themesfromart.com/post/2021-09-22-sleep-additional-subthemes/sleepaddl/" target="_blank" class="links">Sleep</a>
+	      <a href="https://themesfromart.com/post/2021-08-02-soldiers-additional-subthemes/soldiersaddl/" target="_blank" class="links">Soldiers</a> 
+	      <a href="https://themesfromart.com/post/2021-07-12-sports-additional-subthemes/sportsaddl/" target="_blank" class="links">Sports</a>
+	      <a href="https://themesfromart.com/post/2021-11-22-thinking-additional-subthemes/thinkingaddl/" target="_blank" class="links">Thinking</a> 
 	      <a href="https://themesfromart.com/post/2021-03-09-time-additional/timeadditional/" target="_blank" class="links">Time</a>  
 	      <a href="https://themesfromart.com/post/2021-05-10-trains-additional-subthemes/trainsaddl/" target="_blank" class="links">Trains</a>  
-	      <a href="https://themesfromart.com/post/2021-02-26-workadditional/workperspective/" target="_blank" class="links">Work</a>  
+	      <a href="https://themesfromart.com/post/2021-12-03-thinking-additional-subthemes/visionaddl/" target="_blank" class="links">Vision</a>  
+	      <a href="https://themesfromart.com/post/2021-08-11-wind-additional-subthemes/windaddl/" target="_blank" class="links">Wind</a>  
 	       <a href="https://themesfromart.com/post/2021-02-26-workadditional/workperspective/" target="_blank" class="links">Work</a> 
     </div>
   </div>
@@ -80,10 +94,9 @@
 <div class="fullCard">
   <div class="cardContent">
     <div class="cardText">
-  <!--<themeBox>Alcohol Beauty Chance Death Decisions Destruction Silence Time Trains Work</themeBox>-->
-      <p> If you are interested in a compilation of all the blog posts so far, please click <a href="LeanPub.com" target="_blank" class="links" >here to visit LeanPub.</a> </p>
-    </div>
 
+      <p> If you are interested in a compilation of all the blog posts so far, please look forward -- not yet! to clicking <a href="LeanPub.com" target="_blank" class="links" >here to visit LeanPub enjoying the book.</a> </p>
+    </div>
   </div>
 </div> 
 
