--- a/themes/hugo-theme-texify/layouts/_default/single.html
+++ b/themes/hugo-theme-texify/layouts/_default/single.html
@@ -95,7 +95,7 @@
   <div class="cardContent">
     <div class="cardText">
 
-      <p> If you are interested in a compilation of all the blog posts so far, please look forward -- not yet! to clicking <a href="LeanPub.com" target="_blank" class="links" >here to visit LeanPub enjoying the book.</a> </p>
+      <p> If you are interested in a compilation of all the blog posts so far, please look forward -- not yet! -- to clicking <a href="LeanPub.com" target="_blank" class="links" >here to visiting LeanPub and enjoying the book.</a> </p>
     </div>
   </div>
 </div> 
